@@ -1,3 +1,8 @@
+2003-09-22  Sam Steingold  <sds@gnu.org>
+
+	* unix.d (SHUT_RD, SHUT_WR, SHUT_RDWR): define when not defined
+	Reported by Don Cohen <don-sourceforge@isis.cs3-inc.com>
+
 2003-09-19  Sam Steingold  <sds@gnu.org>
 
 	* unix.d (START_NO_BLOCK, END_NO_BLOCK): new macros
